--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -55,15 +55,15 @@ Struktura složky projektu:
                 <div class="nav-button">
                     <!-- <a href="" target="_blank" class="line-container"> </a> -->
                     <div class="line-container">
-                        <div class="one"><button>DOVOLENÁ</button></div>
-                        <div class="two"><button>PRAKTICKÉ INFORMACE</button></div>
-                        <div class="three"><button>KONTAKT</button></div>
+                        <div class="one"></div>
+                        <div class="two"></div>
+                        <div class="three"></div>
                     </div>
                 </div>
-                <div class="button-container">
+                <div class="buttons-container">
                     <div class="buttons">
                         <a href="index.html"><button>DOVOLENÁ</button></a>
-                        <a href="information.html"> <button>PRAKTICKÉ INFORMACE</button></a>
+                        <a href="information.html"><button>PRAKTICKÉ INFORMACE</button></a>
                         <a href="contact.html"><button>KONTAKT</button></a>
                     </div>
                 </div>
