--- a/individual-work/pitra-2k-web-figma-1/contact.html
+++ b/individual-work/pitra-2k-web-figma-1/contact.html
@@ -34,13 +34,13 @@
                         <div class="three"></div>
                     </div>
                 </div>
-                <div class="button-container">
+                <!-- <div class="button-container">
                     <div class="buttons">
                         <a href="index.html"><button>DOVOLENÁ</button></a>
                         <a href="information.html"> <button>PRAKTICKÉ INFORMACE</button></a>
                         <a href="contact.html"><button>KONTAKT</button></a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </nav>
     </header>
@@ -49,7 +49,7 @@
             <div class="contact-content-container">
                 <div class="contact-content-sub-container">
                     <div class="contact-content-heading">
-                        <h1>KONTAKT -- DOŘEŠIT GRID A TLAČITKO HO POSOUVAJICI, CHYBÍ RESPON</h1>
+                        <h1>KONTAKT</h1>
                     </div>
                     <div class="contact-content-sub-sub-container">
                         <div class="contact-content-sub-item">
