--- a/individual-work/pitra-2k-web-figma-1/index.html
+++ b/individual-work/pitra-2k-web-figma-1/index.html
@@ -61,7 +61,7 @@ Struktura složky projektu:
                         <div class="three"></div>
                     </div>
                 </div>
-                <div class="buttons-container">
+                <div class="buttons-container">  <!-- nejdou mi schovat v rámci responzivity, měly být nahrazeny tím tri-line elementem -->
                     <div class="buttons">
                         <a href="index.html"><button>DOVOLENÁ</button></a>
                         <a href="information.html"><button>PRAKTICKÉ INFORMACE</button></a>
