--- a/individual-work/Tests/index.html
+++ b/individual-work/Tests/index.html
@@ -13,13 +13,18 @@
     <main>
         <div class="container">
             <div class="item">
-                <p>opposed to using 'Content here, content here', making it look like readable English. Many desktop
-                    publishing
-                    packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem
-                    ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years,
-                    sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                <div>
+                    <h1>
+                        Vítejte
+                    </h1>
+                </div>
+                <div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum incidunt error non quasi nam
+                        iste earum possimus debitis dignissimos, quis aliquid doloremque? Aliquid eum, voluptates illo
+                        nam debitis nobis nihil.</p>
+                </div>
             </div>
-            
+
         </div>
 
     </main>
