--- a/individual-work/Tests/index.html
+++ b/individual-work/Tests/index.html
@@ -15,7 +15,7 @@
             <div class="item">
                 <div>
                     <h1>
-                        Vítejte
+                       <u> Vítejte  </u>                      
                     </h1>
                 </div>
                 <div>
@@ -24,10 +24,9 @@
                         nam debitis nobis nihil.</p>
                 </div>
             </div>
-
         </div>
-
     </main>
+    <script src="index.js"></script>
 </body>
 
 </html>
