--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -35,43 +35,43 @@
     </nav> -->
     <header>
         <nav>
-            <!-- <div class="navbar-main-logo">
-                <img src="" alt="">
-            </div> -->
-            <div class="navbar-main-button">
+            <div class="navbar-main">
+                <div class="logo-container">
+                    <img src="images/logo.jpg" alt="logo">
+                </div>
                 <div class="button-container">
-                    <!-- <ul>
-                        <li><a href="index.html">homepage</a></li>
-                        <li><a href="about.html">about</a></li>
-                    </ul>
+                    <div class="button1">
+                        <ul>
+                            <li><a href="index.html">visit homepage</a></li>
+                            <li><a href="about.html">read about us</a></li>
+                        </ul>
+                    </div>
+                    <div class="action" onclick="actionToggle();">
+                        <span>+</span>
 
-                    <nav class="navbar sticky-top navbar-light bg-light">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="#">Sticky top</a>
-                        </div>
-                    </nav>
- -->
-                   
+                        <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111765.svg" alt="" width="25px">read about</li> -->
+                        <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111432.svg" alt="" width="25px">Share on
+                                GitHub</li>
+                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg" alt="" width="25px">Share on
+                                Instagram</li>
+                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111341.svg" alt="" width="25px">Share on
+                                Codepen</li>
+                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384030.svg" alt="" width="25px">Share on
+                                Linkedin</li> -->
+
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="action" onclick="actionToggle();">
-        <span>+</span>
-        <ul>
-            <li><a href="index.html">visit homepage</a></li>
-            <li><a href="about.html">read about us</a></li>
-            <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111765.svg" alt="" width="25px">read about</li> -->
-            <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111432.svg" alt="" width="25px">Share on
-                GitHub</li>
-            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg" alt="" width="25px">Share on
-                Instagram</li>
-            <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111341.svg" alt="" width="25px">Share on
-                Codepen</li>
-            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384030.svg" alt="" width="25px">Share on
-                Linkedin</li> -->
-        </ul>
-    </div>
+    <main>
+        <section id="s1">
+            <div>
+
+            </div>
+        </section>
+    </main>
+
 
 
     <!-- Optional JavaScript; choose one of the two! -->
