--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -17,39 +17,33 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <div class="navbar-main">
-          <div class="logo">
-            <img src="images/logo.jpg" alt="logo" />
-          </div>
-          <div class="button">
-            <ul class="button-container">
-              <li><a href="index.html">visit homepage</a></li>
-              <li><a href="about.html">read about us</a></li>
-            </ul>
-            <div class="action" onclick="actionToggle();">
-              <span>+</span>
+   
 
-              <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111765.svg" alt="" width="25px">read about</li> -->
-              <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111432.svg" alt="" width="25px">Share on
-                                GitHub</li>
-                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg" alt="" width="25px">Share on
-                                Instagram</li>
-                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111341.svg" alt="" width="25px">Share on
-                                Codepen</li>
-                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384030.svg" alt="" width="25px">Share on
-                                Linkedin</li> -->
-            </div>
+    <main>
+      <section>
+        <div class="first-sub-section">
+          <div class="fss-heading-container">
+            <h1>Welcome here, pal</h1>
+          </div>
+          <div class="fss-image-container">
+            <img src="./images/timg.png" alt="image" />
+            <!-- <img src="./images/timg.png" alt="image" /> -->
+          </div>
+          <div class="fss-paragraph-container">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+              quis rerum earum repellat quisquam consectetur ut amet, rem
+              tempora nulla exercitationem perferendis nesciunt, adipisci dicta
+              et dolores labore eius recusandae?
+            </p>
           </div>
         </div>
-      </nav>
-    </header>
-    <main>
-      <section id="s1">
-        <div></div>
       </section>
     </main>
+
+    <footer>
+      <div></div>
+    </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
