--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -62,14 +62,23 @@
                 <div class="sss-content-organizer">
                     <div class="sss-first-image-desc-container">
                         <img src="./images/timg.png" alt="image" />
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
-                        </p>
+                        <div class="sssf-desc-container">
+                            <div>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
+                                </p>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="sss-second-image-desc-container">
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
-                        </p>
+                        <div class="ssss-desc-container">
+                            <div>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
+                                </p>
+                            </div>
+                        </div>
                         <img src="./images/timg.png" alt="image" />
                     </div>
                 </div>
@@ -79,6 +88,14 @@
                     </p>
                 </div>
             </div>
+            <!-- <div class="third-sub-section">
+                <div class="tss-image-container">
+                    <img src="./images/timg.png" alt="image" />
+                    <img src="./images/timg.png" alt="image" />
+                    <img src="./images/timg.png" alt="image" />
+                    <img src="./images/timg.png" alt="image" />
+                </div>
+            </div> -->
         </section>
     </main>
 
