--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -88,14 +88,18 @@
                     </p>
                 </div>
             </div>
-            <!-- <div class="third-sub-section">
+            <div class="third-sub-section">
                 <div class="tss-image-container">
-                    <img src="./images/timg.png" alt="image" />
-                    <img src="./images/timg.png" alt="image" />
-                    <img src="./images/timg.png" alt="image" />
-                    <img src="./images/timg.png" alt="image" />
+                    <ul>
+                        <li><img src="./images/timg.png" alt="image" /></li>
+                        <li><img src="./images/timg.png" alt="image" /></li>
+                        <li><img src="./images/timg.png" alt="image" /></li>
+                        <li><img src="./images/timg.png" alt="image" /></li>
+                        <!-- <li><img src="./images/timg.png" alt="image" /></li>
+                        <li><img src="./images/timg.png" alt="image" /></li> -->
+                    </ul>
                 </div>
-            </div> -->
+            </div>
         </section>
     </main>
 
