another section and fonts

--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -99,6 +99,19 @@
                         <li><img src="./images/timg.png" alt="image" /></li> -->
                     </ul>
                 </div>
+
+
+                <div class="tss-image-desc-container">
+                    <img src="./images/timg.png" alt="image" />
+                    <div class="tss-desc-container">
+                        <div>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
     </main>
