--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -49,8 +49,8 @@
                     <h1>Welcome here, pal</h1>
                 </div>
                 <div class="fss-image-container">
-                    <img src="./images/timg.png" alt="image" />
-                    <img src="./images/timg.png" alt="image" />
+                    <img src="./images/foto.jpg" alt="image" />
+                    <img src="./images/foto.jpg" alt="image" />
                 </div>
                 <div class="fss-paragraph-container">
                     <p>
@@ -61,7 +61,7 @@
             <div class="second-sub-section">
                 <div class="sss-content-organizer">
                     <div class="sss-first-image-desc-container">
-                        <img src="./images/timg.png" alt="image" />
+                        <img src="./images/foto.jpg" alt="image" />
                         <div class="sssf-desc-container">
                             <div>
                                 <p>
@@ -79,7 +79,7 @@
                                 </p>
                             </div>
                         </div>
-                        <img src="./images/timg.png" alt="image" />
+                        <img src="./images/foto.jpg" alt="image" />
                     </div>
                 </div>
                 <div class="sss-paragraph-container">
@@ -90,26 +90,34 @@
             </div>
             <div class="third-sub-section">
                 <div class="tss-image-container">
-                    <ul>
-                        <li><img src="./images/timg.png" alt="image" /></li>
-                        <li><img src="./images/timg.png" alt="image" /></li>
-                        <li><img src="./images/timg.png" alt="image" /></li>
-                        <li><img src="./images/timg.png" alt="image" /></li>
-                        <!-- <li><img src="./images/timg.png" alt="image" /></li>
-                        <li><img src="./images/timg.png" alt="image" /></li> -->
-                    </ul>
+                    <div>
+                        <img src="./images/foto.jpg" alt="image" />
+                    </div>
+                    <div>
+                        <img src="./images/foto.jpg" alt="image" />
+                    </div>
+                    <div>
+                        <img src="./images/foto.jpg" alt="image" />
+                    </div>
+                    <div>
+                        <img src="./images/foto.jpg" alt="image" />
+                    </div>
                 </div>
 
 
                 <div class="tss-image-desc-container">
-                    <img src="./images/timg.png" alt="image" />
-                    <div class="tss-desc-container">
-                        <div>
-                            <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
-                            </p>
+
+                    <div class="tss-sub-container">
+                        <img src="./images/foto.jpg" alt="image" />
+                        <div class="tss-desc-container">
+                            <div>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
+                                </p>
+                            </div>
                         </div>
                     </div>
+
                 </div>
 
             </div>
@@ -117,7 +125,14 @@
     </main>
 
     <footer>
-        <div></div>
+        <div class="footer-main">
+            <div>
+                <p>lorem ipsum testus</p>
+            </div>
+            <div>
+                <p>lorem ipsum testus</p>
+            </div>
+        </div>
     </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
