--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -126,12 +126,15 @@
 
     <footer>
         <div class="footer-main">
-            <div>
-                <p>lorem ipsum testus</p>
+            <div class="footer-text-container">
+                <div>
+                    <p>Navrhnul a vytvořil David Pitra</p>
+                </div>
+                <div>
+                    <p>© 2022 - <span>Všechna práva vyhrazena</span> </p>
+                </div>
             </div>
-            <div>
-                <p>lorem ipsum testus</p>
-            </div>
+
         </div>
     </footer>
 
