--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -49,19 +49,19 @@
                     <h1>Welcome here, pal</h1>
                 </div>
                 <div class="fss-image-container">
-                    <img src="./images/foto.jpg" alt="image" />
-                    <img src="./images/foto.jpg" alt="image" />
+                    <img src="./images/20.JPG" alt="image" />
+                    <img src="./images/9.JPG" alt="image" />
                 </div>
                 <div class="fss-paragraph-container">
-                    <p>
+                    <h2>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quis rerum earum repellat quisquam consectetur ut amet, rem tempora nulla exercitationem perferendis nesciunt, adipisci dicta et dolores labore eius recusandae?
-                    </p>
+                    </h2>
                 </div>
             </div>
             <div class="second-sub-section">
                 <div class="sss-content-organizer">
                     <div class="sss-first-image-desc-container">
-                        <img src="./images/foto.jpg" alt="image" />
+                        <img src="./images/15.jpg" alt="image" />
                         <div class="sssf-desc-container">
                             <div>
                                 <p>
@@ -79,36 +79,39 @@
                                 </p>
                             </div>
                         </div>
-                        <img src="./images/foto.jpg" alt="image" />
+                        <img src="./images/3.JPG" alt="image" />
                     </div>
                 </div>
                 <div class="sss-paragraph-container">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sunt asperiores amet illum inventore ut eos natus vel, similique ducimus minima doloremque neque. Esse necessitatibus consequuntur animi impedit, earum numquam!
-                    </p>
+                    <h3>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sunt asperiores amet illum inventore ut eos natus vel, similique ducimus minima doloremque neque. Esse necessitatibus consequuntur animi impedit, earum numquam! Lorem ipsum dolor sit amet
+                        necessitatibus consequuntur animi impedit, earum numquam!
+
+                    </h3>
                 </div>
             </div>
             <div class="third-sub-section">
                 <div class="tss-image-container">
                     <div>
-                        <img src="./images/foto.jpg" alt="image" />
+                        <img src="./images/6.JPG" alt="image" />
                     </div>
                     <div>
-                        <img src="./images/foto.jpg" alt="image" />
+                        <img src="./images/10.JPG" alt="image" />
                     </div>
                     <div>
-                        <img src="./images/foto.jpg" alt="image" />
+                        <img src="./images/14.jpg" alt="image" />
                     </div>
                     <div>
-                        <img src="./images/foto.jpg" alt="image" />
+                        <img src="./images/background-about-1.jpg" alt="image" />
                     </div>
+
                 </div>
 
 
                 <div class="tss-image-desc-container">
 
                     <div class="tss-sub-container">
-                        <img src="./images/foto.jpg" alt="image" />
+                        <img src="./images/21.JPG" alt="image" />
                         <div class="tss-desc-container">
                             <div>
                                 <p>
