--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -43,16 +43,30 @@
     </header>
     <main>
         <section>
-            <div class="about-first-section">
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
+            <div class="about-section">
+                <div class="text-container">
+                    <div class="box-1">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
+                    </div>
+                    <div class="box-2">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
+                    </div>
+                    <div class="box-3">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
+                    </div>
                 </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
+            </div>
+            <div class="contact-section">
+                <div class="contact-container">
+                    <form action="click"></form>
+                    <input type="text">
+                    <input type="text">
+                    <input type="text">
+                    <input type="text">
+                    <input type="text">
+                    <button></button>
                 </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
-                </div>
+
             </div>
         </section>
     </main>
