--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -57,16 +57,44 @@
                 </div>
             </div>
             <div class="contact-section">
-                <div class="contact-container">
-                    <form action="click"></form>
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <button></button>
-                </div>
+                <form>
+                    <ul class="contact-input-container">
+                        <li>
+                            <!-- <label>Full Name <span class="required">*</span></label> -->
+                            <input type="text" name="name-first" class="name-input" placeholder="First name" />
+                            <input type="text" name="name-last" class="name-input" placeholder="Last name" /></li>
+                        <li>
+                            <!-- <label>Email <!-- <span class="required">*</span> </label> -->
+                            <input type="email" name="email" class="input-email" placeholder="Email" />
+                        </li>
 
+                        <li>
+                            <!-- <label>Your Message <!-- <span class="required">*</span> </label> -->
+                            <textarea name="message" class="input-message" placeholder="Abc"></textarea>
+                        </li>
+                        <!-- <li>
+                             <label>Subject</label><select name="subject" class="input-subject-selector">    
+                                <optgroup label="Choose email subject">
+                                    <option value="Question">Question</option>
+                                    <option value="Report">Bug Report</option>
+                                    <option value="Partnership">Partnership</option>
+                                    <option value="Other">Other</option>
+                                </optgroup>                            
+                                
+                                </select>
+                        </li>  -->
+                        <button>Submit form</button>
+                    </ul>
+                </form>
+                <!-- <form action="click"></form>
+                    <input type="text">
+                    <input type="text">
+                    <input type="text">
+                    <input type="text">
+                    <input type="text">
+                    <button></button> -->
+
+            </div>
             </div>
         </section>
     </main>
