--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -44,6 +44,9 @@
     <main>
         <section>
             <div class="about-section">
+                <div class="about-heading-container">
+                    <h1>And there is something about us</h1>
+                </div>
                 <div class="text-container">
                     <div class="box-1">
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
@@ -57,44 +60,44 @@
                 </div>
             </div>
             <div class="contact-section">
-                <form>
-                    <ul class="contact-input-container">
-                        <li>
-                            <!-- <label>Full Name <span class="required">*</span></label> -->
-                            <input type="text" name="name-first" class="name-input" placeholder="First name" />
-                            <input type="text" name="name-last" class="name-input" placeholder="Last name" /></li>
-                        <li>
-                            <!-- <label>Email <!-- <span class="required">*</span> </label> -->
-                            <input type="email" name="email" class="input-email" placeholder="Email" />
-                        </li>
+                <div class="contact-container">
+                    <div class="form-heading">
+                        <h2>Place your thought here</h2>
+                    </div>
+                    <div class="form-container">
+                        <form>
+                            <ul class="contact-input-container">
+                                <li>
+                                    <!-- <label>Full Name <span class="required">*</span></label> -->
+                                    <input type="text" name="name-first" class="name-input" placeholder="First name" />
+                                    <input type="text" name="name-last" class="name-input" placeholder="Last name" /></li>
+                                <li>
+                                    <!-- <label>Email  <span class="required">*</span> </label> -->
+                                    <input type="email" name="email" class="input-email" placeholder="Email" />
+                                </li>
 
-                        <li>
-                            <!-- <label>Your Message <!-- <span class="required">*</span> </label> -->
-                            <textarea name="message" class="input-message" placeholder="Abc"></textarea>
-                        </li>
-                        <!-- <li>
-                             <label>Subject</label><select name="subject" class="input-subject-selector">    
-                                <optgroup label="Choose email subject">
-                                    <option value="Question">Question</option>
-                                    <option value="Report">Bug Report</option>
-                                    <option value="Partnership">Partnership</option>
-                                    <option value="Other">Other</option>
-                                </optgroup>                            
-                                
-                                </select>
-                        </li>  -->
-                        <button>Submit form</button>
-                    </ul>
-                </form>
-                <!-- <form action="click"></form>
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <button></button> -->
+                                <li>
+                                    <!-- <label>Your Message <span class="required">*</span> </label> -->
+                                    <textarea name="message" class="input-message" placeholder="Abc"></textarea>
+                                </li>
+                                <!-- <li>
+                                     <label>Subject</label><select name="subject" class="input-subject-selector">    
+                                        <optgroup label="Choose email subject">
+                                            <option value="Question">Question</option>
+                                            <option value="Report">Bug Report</option>
+                                            <option value="Partnership">Partnership</option>
+                                            <option value="Other">Other</option>
+                                        </optgroup>                            
+                                        
+                                        </select>
+                                </li>  -->
+                                <!-- <button>Submit form</button>  style="vertical-align:middle"-->
 
-            </div>
+                                <button class="button"><span>Submit</span></button>
+                            </ul>
+                        </form>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
@@ -102,13 +105,12 @@
         <div class="footer-main">
             <div class="footer-text-container">
                 <div>
-                    <p>Navrhnul a vytvořil David Pitra</p>
+                    <p>Made by David Pitra</p>
                 </div>
                 <div>
-                    <p>© 2022 - <span>Všechna práva vyhrazena</span> </p>
+                    <p>© 2022 - <span>All rights reserved</span> </p>
                 </div>
             </div>
-
         </div>
     </footer>
     <!-- Optional JavaScript; choose one of the two! -->
